Major changes to implement right-click option on world map, which shows icon